@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2003/03/27 17:53:20 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2003/04/13 11:43:25 cjep Exp $
 #
 
-DISTNAME=	pen-0.10.0
+DISTNAME=	pen-0.10.1
 CATEGORIES=	net
 MASTER_SITES=	http://siag.nu/pub/pen/					\
 		ftp://siag.nu/pub/pen/
@@ -11,6 +11,9 @@ HOMEPAGE=	http://siag.nu/pen/
 COMMENT=	load balancer for "simple" tcp based protocols
 
 GNU_CONFIGURE=	YES
+
+# Avoid pen complaining on NetBSD
+CONFIGURE_ARGS+=	--with-fd_setsize=2048
 
 post-install:
 #.for prg in pen mergelogs
